// Vitest Snapshot v1

exports[`"get-loginCallback" handler > calls "createSession" with corrects args 1`] = `
[
  [
    {
      "envName": "dummyEnvName",
      "tokens": {
        "accessToken": "dummyAccessToken",
        "expiresIn": 123,
        "idToken": "dummyIdToken",
        "idTokenPayload": {
          "nonce": "dummyIdTokenNonce",
          "sub": "dummySub",
        },
        "refreshToken": "dummyRefreshToken",
      },
    },
  ],
]
`;

exports[`"get-loginCallback" handler > calls "fetchTokens" with correct args 1`] = `
[
  [
    {
      "authDomain": "dummyAuthDomain",
      "clientId": "dummyClientId",
      "code": "dummyCode",
      "codeVerifier": "dummyCodeVerifier",
      "loginCallbackUrl": "dummyLoginCallbackUrl",
    },
  ],
]
`;

exports[`"get-loginCallback" handler > calls "parseOauthCookie" with correct args 1`] = `
[
  [
    "dummyCookies",
  ],
]
`;

exports[`"get-loginCallback" handler > resolves with a correct value 1`] = `
{
  "body": "<script>alert('Great success!')</script>",
  "cookies": [
    "dummySessionCookie",
  ],
  "headers": {
    "Content-Type": "text/html",
  },
  "statusCode": 200,
}
`;

exports[`"get-loginCallback" handler > when "authDomain" env var is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "XuJRO7_43O",
  ],
]
`;

exports[`"get-loginCallback" handler > when "authDomain" env var is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when "clientId" env var is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "XuJRO7_43O",
  ],
]
`;

exports[`"get-loginCallback" handler > when "clientId" env var is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when "createSession" rejects > calls "errorResponse" with correct args 1`] = `
[
  [
    "h7UMnEUDvF",
    {
      "error": [Error: dummyErrorMessage],
    },
  ],
]
`;

exports[`"get-loginCallback" handler > when "createSession" rejects > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when "envName" env var is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "XuJRO7_43O",
  ],
]
`;

exports[`"get-loginCallback" handler > when "envName" env var is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when "fetchTokens" rejects > calls "errorResponse" with correct args 1`] = `
[
  [
    "-glnzeksvh",
    {
      "error": [Error: dummyErrorMessage],
    },
  ],
]
`;

exports[`"get-loginCallback" handler > when "fetchTokens" rejects > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when "idTokenNonce" from "oauth" cookie does not match with "nonce" from the "idToken" payload > calls "errorResponse" with correct args 1`] = `
[
  [
    "C25fjaal7o",
    {
      "statusCode": 401,
    },
  ],
]
`;

exports[`"get-loginCallback" handler > when "idTokenNonce" from "oauth" cookie does not match with "nonce" from the "idToken" payload > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when "loginCallbackUrl" env var is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "XuJRO7_43O",
  ],
]
`;

exports[`"get-loginCallback" handler > when "loginCallbackUrl" env var is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when "oauth" cookie content is missing "codeVerifier" key > calls "errorResponse" with correct args 1`] = `
[
  [
    "OSUiwUI_DG",
  ],
]
`;

exports[`"get-loginCallback" handler > when "oauth" cookie content is missing "codeVerifier" key > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when "oauth" cookie content is missing "idTokenNonce" key > calls "errorResponse" with correct args 1`] = `
[
  [
    "OSUiwUI_DG",
  ],
]
`;

exports[`"get-loginCallback" handler > when "oauth" cookie content is missing "idTokenNonce" key > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when "oauth" cookie content is missing "stateNonce" key > calls "errorResponse" with correct args 1`] = `
[
  [
    "OSUiwUI_DG",
  ],
]
`;

exports[`"get-loginCallback" handler > when "oauth" cookie content is missing "stateNonce" key > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when "stateNonce" from "oauth" cookie does not match with "state" from query strings params > calls "errorResponse" with correct args 1`] = `
[
  [
    "eWe87M5edc",
    {
      "statusCode": 401,
    },
  ],
]
`;

exports[`"get-loginCallback" handler > when "stateNonce" from "oauth" cookie does not match with "state" from query strings params > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when code query string parameter is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "1cByWITGGHw",
    {
      "statusCode": 400,
    },
  ],
]
`;

exports[`"get-loginCallback" handler > when code query string parameter is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;

exports[`"get-loginCallback" handler > when state query string parameter is missing > calls "errorResponse" with correct args 1`] = `
[
  [
    "1cByWITGGHw",
    {
      "statusCode": 400,
    },
  ],
]
`;

exports[`"get-loginCallback" handler > when state query string parameter is missing > resolves with a correct value 1`] = `"dummyerrorResponse"`;
